--- a/.github/workflows/TransformImage.yml
+++ b/.github/workflows/TransformImage.yml
@@ -30,6 +30,7 @@ jobs:
           ISSUE_NUMBER: ${{ github.event.issue.number }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REPOSITORY_OWNER: ${{ github.repository_owner }}
+          DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}
         # pip install -r requirements.txt
         run: |
           python main.py
