new update test awk instead of sed

--- a/.github/workflows/UpdateGameState.yml
+++ b/.github/workflows/UpdateGameState.yml
@@ -25,10 +25,10 @@ jobs:
         run: |
           # Convert comma-delimited list into YAML formatted options
           NEW_OPTIONS=$(echo "${CURRENT_WORD_LIST}" | awk -F, '{for(i=1;i<=NF;i++) printf "      - label: %s\n        required: false\n", $i}')
-          echo "${NEW_OPTIONS}"
-          # Add the new options into the workflow file
-          sed -i "/id: multi-selection/a\\
-          \    options:\n${NEW_OPTIONS}" .github/workflows/easy.yml
+          
+          # Insert the new options after "id: multi-selection"
+          awk -v new_options="$NEW_OPTIONS" '/id: multi-selection/ {print; print "    options:"; print new_options; next}1' .github/ISSUE_TEMPLATE/easy.yml > temp.yml
+          mv temp.yml .github/ISSUE_TEMPLATE/easy.yml
 
       - name: Commit changes
         run: |
