--- a/.github/workflows/UpdateGameState.yml
+++ b/.github/workflows/UpdateGameState.yml
@@ -8,6 +8,11 @@ on:
 jobs:
   UpdateGame:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
+      issues: write
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
