--- a/.github/ISSUE_TEMPLATE/easy.yml
+++ b/.github/ISSUE_TEMPLATE/easy.yml
@@ -6,22 +6,12 @@ body:
     attributes:
       value: |
         ### You can select as many of these as you want:
-
   - type: checkboxes
     id: multi-selection
-    options:
-      - label: Balloon
-        required: false
-      - label:  Cloud
-        required: false
-      - label:  Tree
-        required: false
-      - label:  River
-        required: false
-      - label:  Mountain
-        required: false
     attributes:
       label: Choose multiple
+      options:
+        - label: Grass
           required: false
         - label: Blue sky
           required: false
