--- a/.github/workflows/UpdateGameState.yml
+++ b/.github/workflows/UpdateGameState.yml
@@ -32,7 +32,7 @@ jobs:
           NEW_OPTIONS=$(echo "${CURRENT_WORD_LIST}" | awk -F, '{for(i=1;i<=NF;i++) printf "      - label: %s\n        required: false\n", $i}')
 
           # Insert the new options after "id: multi-selection"
-          awk -v new_options="$NEW_OPTIONS" '/id: multi-selection/ {print; print "    attributes:"; print "      label: Choose multiple"; print "    options:"; print new_options; next}1' .github/ISSUE_TEMPLATE/easy.yml > temp.yml
+          awk -v new_options="$NEW_OPTIONS" '/id: multi-selection/ {print; print "    attributes:"; print "      label: Choose multiple"; next} /attributes:/ {print "    options:"; print new_options; next} 1' .github/ISSUE_TEMPLATE/easy.yml > temp.yml
           mv temp.yml .github/ISSUE_TEMPLATE/easy.yml
 
       - name: Commit changes
