reset easy to original

--- a/.github/ISSUE_TEMPLATE/easy.yml
+++ b/.github/ISSUE_TEMPLATE/easy.yml
@@ -3,17 +3,7 @@ description: A form to select the options available for transforming your curren
 
 body:
   - type: markdown
-    options:
-      - label: Balloon
-        required: false
-      - label:  Cloud
-        required: false
-      - label:  Tree
-        required: false
-      - label:  River
-        required: false
-      - label:  Mountain
-        required: false
+    attributes:
       value: |
         ### You can select as many of these as you want:
   - type: checkboxes
@@ -31,5 +21,5 @@ body:
         required: false
       - label:  Mountain
         required: false
-      label: Choose multiple
+    attributes:
       label: Choose multiple
