--- a/.github/ISSUE_TEMPLATE/easy.yml
+++ b/.github/ISSUE_TEMPLATE/easy.yml
@@ -10,16 +10,10 @@ body:
     id: multi-selection
     attributes:
       label: Choose multiple
-    options:
-      - label: Balloon
-        required: false
-      - label:  Cloud
-        required: false
-      - label:  Tree
-        required: false
-      - label:  River
-        required: false
-      - label:  Mountain
-        required: false
-    attributes:
-      label: Choose multiple
+      options:
+        - label: Grass
+          required: false
+        - label: Blue sky
+          required: false
+        - label: Clouds
+          required: false
