--- a/.github/workflows/UpdateGameState.yml
+++ b/.github/workflows/UpdateGameState.yml
@@ -17,38 +17,35 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Delete Workflow Options
-        run: |
-          echo "Modifying workflows..."
-          # Remove all options from the workflow file
-          sed -i '/options:/,/^    attributes:/d' .github/ISSUE_TEMPLATE/easy.yml
-          echo "Workflows modified!"
-
-      - name: Add New Options
+      - name: Create Workflow File
         env:
           CURRENT_WORD_LIST: ${{ vars.CURRENT_WORD_LIST }}
         run: |
           # Convert comma-delimited list into YAML formatted options
-          NEW_OPTIONS=$(echo "${CURRENT_WORD_LIST}" | awk -F, '{for(i=1;i<=NF;i++) printf "      - label: %s\n          required: false\n", $i}')
+          NEW_OPTIONS=$(echo "${CURRENT_WORD_LIST}" | awk -F, '{for(i=1;i<=NF;i++) printf "        - label: %s\n          required: false\n", $i}')
 
-          # Insert the new options in the correct location
-          awk -v new_options="  $NEW_OPTIONS" '
-            /id: multi-selection/ {
-                print;
-                print "    attributes:";
-                print "      label: Choose multiple";
-                print "      options:";
-                print new_options;
-                next
-            }
-            {print}
-          ' .github/ISSUE_TEMPLATE/easy.yml > temp.yml
-          mv temp.yml .github/ISSUE_TEMPLATE/easy.yml
+          # Create the entire YAML file
+          cat <<EOF > .github/ISSUE_TEMPLATE/easy.yml
+name: Transform the image
+description: A form to select the options available for transforming your current image.
+
+body:
+  - type: markdown
+    attributes:
+      value: |
+        ### You can select as many of these as you want:
+  - type: checkboxes
+    id: multi-selection
+    attributes:
+      label: Choose multiple
+      options:
+$NEW_OPTIONS
+EOF
 
       - name: Commit changes
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add .
+          git add .github/ISSUE_TEMPLATE/easy.yml
           git commit -m "Creating new game setup"
           git push
