--- a/.github/workflows/UpdateGameState.yml
+++ b/.github/workflows/UpdateGameState.yml
@@ -27,9 +27,9 @@ jobs:
           MEDIUM_WORD_LIST=$(echo "${WORD_LIST}" | tr ',' '\n' | shuf | head -n 7 | tr '\n' ',' | sed 's/,$//')
           HARD_WORD_LIST=$(echo "${WORD_LIST}" | tr ',' '\n' | shuf | head -n 5 | tr '\n' ',' | sed 's/,$//')
 
-          echo "EASY_WORD_LIST=$EASY_WORD_LIST"
-          echo "MEDIUM_WORD_LIST=$MEDIUM_WORD_LIST"
-          echo "HARD_WORD_LIST=$HARD_WORD_LIST"
+          echo "EASY_WORD_LIST=$easy_WORD_LIST"
+          echo "MEDIUM_WORD_LIST=$medium_WORD_LIST"
+          echo "HARD_WORD_LIST=$hard_WORD_LIST"
 
           # Create the YAML files for each difficulty
           for difficulty in easy medium hard; do
