--- a/.github/ISSUE_TEMPLATE/easy.yml
+++ b/.github/ISSUE_TEMPLATE/easy.yml
@@ -1,5 +1,6 @@
 name: Transform the image (easy)
 description: A form to select the options available for transforming your current image.
+title: "Transform easy"
 
 body:
   - type: markdown
