moving game state py

--- a/.github/workflows/ManageGameFiles.yml
+++ b/.github/workflows/ManageGameFiles.yml
@@ -33,7 +33,7 @@ jobs:
           REPOSITORY_OWNER: ${{ github.repository_owner }}
         run: |
           pip install -r requirements.txt
-          python ./PlayGame/manageGameState.py
+          python manageGameState.py
 
       # Create new commit with the changed files and push it to GitHub
       # - name: Commit and push changes
