--- a/.github/workflows/ManageGameFiles.yml
+++ b/.github/workflows/ManageGameFiles.yml
@@ -37,13 +37,13 @@ jobs:
           python ./PlayGame/manageGameState.py
 
       # Create new commit with the changed files and push it to GitHub
-      # - name: Commit and push changes
-      #   env:
-      #     ISSUE_TITLE: ${{ github.event.issue.title }}
-      #     ISSUE_AUTHOR: ${{ github.event.issue.user.login }}
-      #   run: |
-      #     git config --global user.name "github-actions[bot]"
-      #     git config --global user.email "github-actions[bot]@users.noreply.github.com"
-      #     git add .
-      #     git commit -m "${ISSUE_TITLE} by ${ISSUE_AUTHOR}"
-      #     git push
+      - name: Commit and push changes
+        env:
+          ISSUE_TITLE: ${{ github.event.issue.title }}
+          ISSUE_AUTHOR: ${{ github.event.issue.user.login }}
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add .
+          git commit -m "${ISSUE_TITLE} by ${ISSUE_AUTHOR}"
+          git push
