--- a/.github/ISSUE_TEMPLATE/enterCurrentImage.yml
+++ b/.github/ISSUE_TEMPLATE/enterCurrentImage.yml
@@ -13,4 +13,4 @@ body:
       options:
         - Add to current game
         - Dont use current image
-      default: Add to current game
+      default: 0
