pass the discord token to the new workflow

--- a/.github/workflows/ManageIssueOpened.yml
+++ b/.github/workflows/ManageIssueOpened.yml
@@ -78,6 +78,7 @@ jobs:
           ISSUE_NUMBER: ${{ github.event.issue.number }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REPOSITORY_OWNER: ${{ github.repository_owner }}
+          DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}
         run: |
           pip install -r ./PlayGame/requirements.txt
           python ./PlayGame/manageGameState.py
