--- a/.github/workflows/ManageIssueOpened.yml
+++ b/.github/workflows/ManageIssueOpened.yml
@@ -56,7 +56,8 @@ jobs:
     runs-on: ubuntu-latest
     if: |
       startsWith(github.event.issue.title, 'DeleteEntry') ||
-      startsWith(github.event.issue.title, 'Game')
+      startsWith(github.event.issue.title, 'Game') ||
+      startsWith(github.event.issue.title, 'Vote') ||
 
     permissions:
       contents: write
