add topic to game and clean vote readme

--- a/.github/workflows/StartNewGame.yml
+++ b/.github/workflows/StartNewGame.yml
@@ -64,7 +64,7 @@ jobs:
         run: |
           echo -e "# Votes\nnew competition started empty votes\n" > PlayGame/VotePage/CurrentVotes.md
           echo '{"easy":{},"medium":{},"hard":{}}' > PlayGame/currentVotes.json
-          echo -e '# To vote\nClick on the image and submit the issue\n\n## easy\nNo current entries\n\n## medium\nNo current entries\n\n## hard\nNo current entries\n' > PlayGame/VotePage/README.md
+          echo -e '# To vote\nNo current entries\n\n## easy\nNo current entries\n\n## medium\nNo current entries\n\n## hard\nNo current entries\n' > PlayGame/VotePage/README.md
 
       - name: Commit changes
         run: |
