--- a/.github/workflows/StartNewGame.yml
+++ b/.github/workflows/StartNewGame.yml
@@ -27,87 +27,20 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Generate Word Lists with Difficulty-Based Probability
+        run: /.github/scripts/generate_word_lists.sh
         env:
           WORD_LIST: ${{ vars.WORD_LIST }}
-        run: |
-          # Function to filter words based on probability for a specific difficulty
-          select_words() {
-            difficulty_index=$1
-            word_count=$2
-            echo "$WORD_LIST" | tr ',' '\n' | awk -F':' -v idx=$difficulty_index '{if (rand() < $(idx+1)) print $1}' | shuf | head -n $word_count | tr '\n' ',' | sed 's/,$//'
-          }
-
-          # Generate lists for each difficulty level
-          easy_WORD_LIST=$(select_words 1 10)
-          medium_WORD_LIST=$(select_words 2 7)
-          hard_WORD_LIST=$(select_words 3 5)
-
-          # Create the YAML files for each difficulty
-          for difficulty in easy medium hard; do
-            WORDS_VAR="${difficulty}_WORD_LIST"
-            awk -v options="${!WORDS_VAR}" -v difficulty="$difficulty" 'BEGIN {
-              print "name: Transform the image (" difficulty ")";
-              print "title: Game " difficulty " - do not change the title just fill out the form";
-              print "description: A form to select the options available for transforming your current image.";
-              print "";
-              print "body:";
-              print "  - type: markdown";
-              print "    attributes:";
-              print "      value: |";
-              print "        ### You can select as many of these as you want:";
-              print "  - type: checkboxes";
-              print "    id: multi-selection";
-              print "    attributes:";
-              print "      label: Choose multiple";
-              print "      options:";
-              split(options, opts, ",");
-              for (i in opts) {
-                gsub(/^[ \t]+|[ \t]+$/, "", opts[i]);
-                print "        - label: " opts[i];
-                print "          required: false";
-              }
-            }' difficulty="$difficulty" > .github/ISSUE_TEMPLATE/${difficulty,,}.yml
-          done
 
       - name: Clear the current votes
-        run: |
-          echo '{"easy":{},"medium":{},"hard":{}}' > PlayGame/currentVotes.json
-          echo '{"easy":{},"medium":{},"hard":{}}' > PlayGame/currentEntries.json
-          echo -e "# Votes\nnew competition started empty votes\n" > PlayGame/VotePage/CurrentVotes.md
-          echo -e '# To vote\nNo current entries\n\n## easy\nNo current entries\n\n## medium\nNo current entries\n\n## hard\nNo current entries\n' > PlayGame/VotePage/README.md
-          echo -n "${{ inputs.targetURL }}" > PlayGame/currentStartImage.txt
+        run: /.github/scripts/reset-game-values.sh
+        env:
+          targetURL: ${{ inputs.targetURL }}
 
       - name: Set Game Information Readme
-        run: |
-          echo "
-            # Game Information
-
-            Your goal is to take the picture
-
-            ![CurrentImage]( ${{ inputs.targetURL }} )
-
-            and transform it to the following topic 
-            
-            <h3> ${{ inputs.topic }} </h3>
-            
-            # To Play
-
-            You can select from multiple levels to play this game:
-
-            [Easy](https://github.com/MatissesProjects/GenerateImage/issues/new?title=Game%20easy%20Dont%20modify%20the%20title%20just%20use%20the%20form&template=easy.yml)
-
-            [Medium](https://github.com/MatissesProjects/GenerateImage/issues/new?title=Game%20medium%20Dont%20modify%20the%20title%20just%20use%20the%20form&template=medium.yml)
-
-            [Hard](https://github.com/MatissesProjects/GenerateImage/issues/new?title=Game%20hard%20Dont%20modify%20the%20title%20just%20use%20the%20form&template=hard.yml)
-
-            You can only have a single entry in each mode.
-
-            If you would like to start over, you can [delete your entry](https://github.com/MatissesProjects/GenerateImage/issues/new?title=DeleteEntry%20Dont%20modify%20the%20title%20just%20use%20the%20form&template=deleteEntry.yml).
-
-            # To Vote
-
-            You can go to the [vote page](https://github.com/MatissesProjects/GenerateImage/tree/main/PlayGame/VotePage).
-            " | sed 's/^[ \t]*//' > PlayGame/README.md
+        run: /.github/scripts/generate-game-info.sh
+        env:
+          TARGET_URL: ${{ inputs.targetURL }}
+          TOPIC: ${{ inputs.topic }}
       
       - name: Save topic for later use
         run: echo ${{ inputs.topic }} > PlayGame/currentTopic.txt
